# Basicly-the-vulkan-triangle

./: .clangd  .gitmodules  CMakeLists.txt  README.md  compile-shaders.bat
.zed/: settings.json  tasks.json
includes/: application.hpp  engine.hpp  renderer.hpp  utils.hpp  vulkanApplication.hpp
includes/window/: sdl3_window.hpp  window.hpp
shaders/: triangle.slang
src/: application.cpp  engine.cpp  main.cpp  renderer.cpp  vulkanApplication.cpp
src/utils/: readfile.cpp
src/window/: sdl3_window.cpp
